[package]
name = "scm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
rcgen = { version = "0.14.3", features = ["pem", "x509-parser"] }
dirs = "6.0.0"
toml = "0.9.4"
serde = { version = "1.0.219", features = ["derive"] }
security-framework = {  version = "3.2.0", optional = true }
pem = "3.0.5"
time = "0.3.41"

[features]
default = ["keychain"]
keychain = ["security-framework"]

