[package]
name = "scm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
rcgen = { version = "0.14.3", features = ["pem", "x509-parser"] }
dirs = "6.0.0"
toml = "0.9.4"
serde = { version = "1.0.219", features = ["derive"] }
pem = "3.0.5"
time = "0.3.41"
error-stack = "0.5.0"
thiserror = "2.0.12"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.2.0"

[features]
default = []
